[metadata]
name = cypack
version = 0.1.0
description = Compile nested Python packages into .so/.pyd files with vendor subproject support
long_description = file: README.md
long_description_content_type = text/markdown
author = Jin Liu
license = MIT

[options]
packages = find:
python_requires = >=3.9
install_requires =
    cython>=0.29.24,<3.1.0
    setuptools>=42

[options.extras_require]
build = setuptools

[options.entry_points]
distutils.setup_keywords =
    cypack = cypack:cypack
